updating integration tests